--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -2,9 +2,22 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    /* height: 100vh; */
 }
 
 body {
+    height: 100vh;
     font-family: 'Roboto', sans-serif;
-    background-color: #a88f8f;
+}
+
+footer {
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
+    background-color: #f5f5f5;
+}
+
+.article-img {
+    object-fit: cover;
 }
