--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -2,22 +2,42 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* height: 100vh; */
 }
 
 body {
     height: 100vh;
     font-family: 'Roboto', sans-serif;
+    margin-bottom: 0px;
+    background-color: #dfb539 !important;
 }
 
+nav {
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+
 footer {
-    position: relative;
-    bottom: 0;
+    position: absolute;
+    bottom: -20px;
+    margin: 0;
+    padding: 0 10px;
     width: 100%;
-    height: 2.5rem;
-    background-color: #f5f5f5;
+    /* height: 2.5rem; */
+    /* background-color: #152a42; */
 }
 
 .article-img {
     object-fit: cover;
+}
+
+.logo {
+    height: 50px;
+}
+
+.contr {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 25px;
+    border-radius: 50%;
 }
