--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    height: 100vh;
+    height: 100%;
     font-family: 'Roboto', sans-serif;
     margin-bottom: 0px;
     background-color: #dfb539 !important;
@@ -17,22 +17,33 @@ nav {
 
 
 footer {
-    position: absolute;
-    bottom: -20px;
-    margin: 0;
+    position: relative;
+    /* bottom: -20px; */
+    bottom: 0;
+    margin-bottom: 0;
     padding: 0 10px;
     width: 100%;
     /* height: 2.5rem; */
     /* background-color: #152a42; */
 }
 
+.full-height {
+    height: 100%; 
+}
+
+.full-window {
+    height: 100vh; 
+}
+
 .article-img {
-    object-fit: cover;
+    height: 20vw;
 }
 
 .logo {
     height: 50px;
 }
+
+
 
 .contr {
     display: flex;
