--- a/src/templates/stocks_news.html
+++ b/src/templates/stocks_news.html
@@ -1,18 +1,19 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Stocks</h1>
-    <p>Stocks page</p>
+<div>
+    <h1>Stocks news</h1>
+    <p>Stocks page</p> 
     {#{ news_data }#}
 
-    {% for article in articles %}
+{% for article in articles %}
     <h2>Title: {{ article.title }}</h2>
     <h3>Author: {{ article.author }}</h3>
     {% if article.image %}
     <img class="img-flex article-img" src="{{ article.image }}" alt="{{article.title}}">
-{% else %}
+    {% else %}
     <p class="text-secondary">No image available</p>
-{% endif %}
+    {% endif %}
     <h4>Source: {{ article.source }}</h4>
     <h5>Language: {{ article.language }}</h5>
     <p>Description: {{ article.description}}</p>
@@ -21,7 +22,7 @@
 
         <p>{{ article.published_at }}</p>
     <p>{{ article.content }}</p>
-    <hr
+    <hr>
     {% endfor %}
-
+</div>
 {% endblock %}
