Add filtering news by language.

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -32,7 +32,7 @@
                   Dropdown
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="{{ url_for('stocks_news.connect_to_api') }}">News</a></li>
+                  <li><a class="dropdown-item" href="{{ url_for('stocks_news.get_news') }}">News</a></li>
                   <li><a class="dropdown-item" href="#">Another action</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="#">Something else here</a></li>
