--- a/src/templates/stocks_news.html
+++ b/src/templates/stocks_news.html
@@ -3,9 +3,36 @@
 {% block content %}
 <div>
     <h1>Stocks news</h1>
-    <p>Stocks page</p> 
+    <h2>Select your preferences</h2> 
     {#{ news_data }#}
-
+    <form class="my-2" method="POST" action="{{ url_for('stocks_news.get_news') }}">
+        <div class="d-flex gap-2">
+        <label for="language">Language</label>
+        <select name="language" class="form-select" aria-label="Default select example">
+            {% for code, language in languages.items() %}
+                {% if selected_language == code %}
+                <option value="{{ code }}" selected>{{ language }}</option>
+                {% else %}
+                <option value="{{ code }}">{{ language }}</option>
+                {% endif %}
+            {% endfor %}
+        </select>
+    <!-- </div> -->
+        <!-- <div class="d-grid gap-2"> -->
+            <button class=" btn btn-secondary" type="submit">Get news</button>
+        </div>
+</form>
+{% if news_data %}
+    <div class="alert alert-success" role="alert">
+        News data received
+        Language: {{ language }}
+    </div>
+{% endif %}
+{% if not articles %}
+    <div class="alert alert-warning" role="alert">
+        No news data received
+    </div>
+{% endif %}
 {% for article in articles %}
     <h2>Title: {{ article.title }}</h2>
     <h3>Author: {{ article.author }}</h3>
