--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,8 +6,8 @@
     <h1 >Welcome</h1>
     <p>Welcome to our stocks app</p>
     <div class="flex-row">
-        <a class="btn btn-dark m-2" href="{#{ url_for('login') }#}">Login</a>
-        <a class="btn btn-outline-dark m-2" href="{#{ url_for('register') }#}">Register</a>
+        <a class="btn btn-dark m-2" href="{{ url_for('auth.login') }}">Login</a>
+        <a class="btn btn-outline-dark m-2" href="{{ url_for('auth.register') }}">Register</a>
     </div>
 </div>
 </div>
