--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -16,15 +16,12 @@ nav {
 }
 
 
-footer {
-    position: relative;
-    /* bottom: -20px; */
+.footer {
+    position: fixed;
     bottom: 0;
     margin-bottom: 0;
     padding: 0 10px;
     width: 100%;
-    /* height: 2.5rem; */
-    /* background-color: #152a42; */
 }
 
 .full-height {
@@ -42,8 +39,6 @@ footer {
 .logo {
     height: 50px;
 }
-
-
 
 .contr {
     display: flex;
