Add dynamic active class to navbar links.

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% set active_page = "home" %}
 {% block content %}
 <div class="full-window">
 <div class="d-block bg-light text-center  m-5 p-3">
