--- a/src/templates/stock_details.html
+++ b/src/templates/stock_details.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% set active_page = "stock_details" %}
+
 {% block navbar %} {% include 'includes/navbar_auth.html' %} {% endblock %}
 {% block content %}
 <div class="full-window">
