--- a/src/templates/includes/navbar_auth.html
+++ b/src/templates/includes/navbar_auth.html
@@ -7,18 +7,19 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{ url_for('profile.manage_profile') }}">Home</a>
+            <a class="nav-link {{'active' if active_page == 'home'}}" aria-current="page" href="{{ url_for('profile.manage_profile') }}">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('profile.manage_profile') }}">Profile</a>
+            <a class="nav-link {{'active' if active_page == 'profile'}}" href="{{ url_for('profile.manage_profile') }}">Profile</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Stock Details</a>
+            <a class="nav-link {{'active' if active_page == 'stock_details'}}" href="#" tabindex="-1">Stock Details</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('stocks_news.get_news') }}">News</a>
+            <a class="nav-link {{'active' if active_page == 'news'}}" href="{{ url_for('stocks_news.get_news') }}">News</a>
           </li>
-        </ul>
+        </ul>          
+		<div class="right-10 nav-item"> <a class="nav-link" href="{{ url_for('auth.login') }}">Logout</a></div>
       </div>
     </div>
 </nav>
