--- a/src/templates/includes/navbar_auth.html
+++ b/src/templates/includes/navbar_auth.html
@@ -13,7 +13,7 @@
             <a class="nav-link" href="{{ url_for('profile.manage_profile') }}">Profile</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Stock Details</a>
+            <a class="nav-link" href="{{ url_for('stocks_graph.render') }}">Stock Details</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('stocks_news.get_news') }}">News</a>
