--- a/src/templates/stocks_graph.html
+++ b/src/templates/stocks_graph.html
@@ -1,18 +1,27 @@
 {% extends "base.html" %}
-
+{% block navbar %} {% include 'includes/navbar_auth.html' %} {% endblock %}
 {% block content %}
-<form action="/stocks_graph/">
-  <p>Please select your stock:</p>
-  <input type="radio" id="stock1" name="stock" value="TSLA">
-  <label for="stock1">Tesla</label><br>
-  <input type="radio" id="stock2" name="stock" value="AMZN">
-  <label for="stock2">Amazon</label><br>
-  <input type="radio" id="stock3" name="stock" value="GOOG">
-  <label for="stock3">Google</label><br><br>
-  <input type="submit" value="Submit">
-</form>
-
-<img src="../static/img.png" alt="my plot">
+<div class="full-window">
+  <div class="d-block bg-light text-center  m-10 p-3">
+    <h1>Stock details</h1>
+  </div>
+  <div class="" style="float: left;">
+    <form action="/stocks_graph/">
+      <p>Please select your stock:</p>
+      <input type="radio" id="stock1" name="stock" value="TSLA">
+      <label for="stock1">Tesla</label><br>
+      <input type="radio" id="stock2" name="stock" value="AMZN">
+      <label for="stock2">Amazon</label><br>
+      <input type="radio" id="stock3" name="stock" value="GOOG">
+      <label for="stock3">Google</label><br><br>
+      <input type="submit" value="Submit">
+    </form>
+  </div>
+  <div style="float: right;">
+    <img src="../static/img.png" alt="my plot">
+  </div>
+</div>
+</div>
 
 <script>
   jQuery(document).ready(function ($) {
@@ -38,5 +47,4 @@
     $('input[type=submit]').hide();
   });
 </script>
-
 {% endblock %}
