--- a/src/templates/stocks_graph.html
+++ b/src/templates/stocks_graph.html
@@ -16,35 +16,19 @@
       <label for="stock3">Google</label><br><br>
       <input type="submit" value="Submit">
     </form>
+
   </div>
   <div style="float: right;">
-    <img src="../static/img.png" alt="my plot">
+    <canvas id="myChart" width="1200" height="400"></canvas>
   </div>
 </div>
 </div>
-
-<script>
-  jQuery(document).ready(function ($) {
-    $(function () {
-      $('input[type=radio]').each(function () {
-        var state = JSON.parse(localStorage.getItem('radio_' + this.id));
-
-        if (state) this.checked = state.checked;
-      });
-    });
-
-    $(window).bind('unload', function () {
-      $('input[type=radio]').each(function () {
-        localStorage.setItem(
-          'radio_' + this.id, JSON.stringify({ checked: this.checked })
-        );
-      });
-    });
-
-    $('input[type=radio]').on('change', function () {
-      $(this).closest("form").submit();
-    });
-    $('input[type=submit]').hide();
-  });
+<script type="text/javascript">
+  var dates = JSON.parse('{{ dates|safe }}');
+  var prices = JSON.parse('{{ prices|safe }}');
+  var stock = '{{ stock }}'
 </script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/graphs.js') }}"></script>
+
+
 {% endblock %}
