--- a/src/templates/includes/navbar_auth.html
+++ b/src/templates/includes/navbar_auth.html
@@ -1,25 +1,22 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="{{ url_for('profile.manage_profile') }}"><img class="logo" src="{{url_for('static', filename='assets/logo.png')}}" alt="logo"></a>
+      <a class="navbar-brand" href="{{ url_for('profile.manage_profile', username=username) }}"><img class="logo" src="{{url_for('static', filename='assets/logo.png')}}" alt="logo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link {{'active' if active_page == 'home'}}" aria-current="page" href="{{ url_for('profile.manage_profile') }}">Home</a>
+            <a class="nav-link {{'active' if active_page == 'home'}}" aria-current="page" href="{{ url_for('profile.manage_profile', username=username) }}">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {{'active' if active_page == 'profile'}}" href="{{ url_for('profile.manage_profile') }}">Profile</a>
+            <a class="nav-link {{'active' if active_page == 'profile'}}" href="{{ url_for('profile.manage_profile', username=username) }}">Profile</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {{'active' if active_page == 'stock_details'}}" href="#" tabindex="-1">Stock Details</a>
+            <a class="nav-link {{'active' if active_page == 'stock_details'}}" href="{{ url_for('stocks_graph.render') }}">Stock Details</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('stocks_graph.render') }}">Stock Details</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link {{'active' if active_page == 'news'}}" href="{{ url_for('stocks_news.get_news') }}">News</a>
+            <a class="nav-link {{'active' if active_page == 'news'}}" href="{{ url_for('profile.get_news', username=username) }}">News</a>
           </li>
         </ul>          
 		<div class="right-10 nav-item"> <a class="nav-link" href="{{ url_for('auth.login') }}">Logout</a></div>
