--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,7 +2,7 @@
 {% set active_page = "home" %}
 {% block content %}
 <div class="full-window">
-<div class="d-block bg-light text-center  m-5 p-3">
+<div class="d-block bg-light text-center rounded-3 m-5 p-3">
     <h1 >Welcome</h1>
     <p>Welcome to our stocks app</p>
     <div class="flex-row">
