--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="full-window">
-    <div class="d-block bg-light m-5 p-3">
+    <div class="d-block bg-light m-5 p-3 rounded-3">
         <h1 class="text-center">Log in</h1>
         <p></p>
         <div class="">
