--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="full-window">
-    <div class="d-block bg-light  m-5 p-3">
+    <div class="d-block bg-light rounded-3 m-5 p-3">
         <h1 class="text-center">Register</h1>
         <div class="">
             <form action="{{ url_for('auth.register') }}" method="post">
