--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="{{ url_for('home.index') }}"><img class="logo" src="{{url_for('static', filename='assets/logo.png')}}" alt="logo"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -9,7 +9,7 @@
             <li class="nav-item">
               <a class="nav-link {{'active' if active_page == 'news'}}" href="{{ url_for('stocks_news.get_news') }}">News</a>
             </li>
-          </ul>
+          </ul> -->
       </div>
   </nav>
 </nav>
