--- a/src/templates/stocks_graph.html
+++ b/src/templates/stocks_graph.html
@@ -2,10 +2,9 @@
 {% block navbar %} {% include 'includes/navbar_auth.html' %} {% endblock %}
 {% block content %}
 <!-- <div class="full-window"> -->
-  <div class="d-block bg-light text-center  m-10 p-3">
+  <div class="d-block bg-light text-center rounded-3 my-5 p-3">
     <h1>Stock details</h1>
-  </div>
-  <div class="" style="float: left;">
+  <div class="stock-graph-select">
     <form action="/stocks_graph/">
       <p>Please select your stock:</p>
       <input type="radio" id="stock1" name="stock" value="TSLA">
@@ -18,9 +17,10 @@
     </form>
 
   </div>
-  <div>
-    <canvas id="myChart" width="auto" height="auto" class="p-3"></canvas>
+  <div class="mb-5">
+    <canvas id="myChart" class="p-3"></canvas>
   </div>
+</div>
 </div>
 <!-- </div> -->
 <script type="text/javascript">
