--- a/src/templates/stocks_news.html
+++ b/src/templates/stocks_news.html
@@ -8,13 +8,12 @@
 
 <!-- main content -->
 {% block content %}
-<div class="bg-body-tertiary w-100 p-4 rounded-3">
+<div class="bg-light w-100 p-4 rounded-3">
 	<h1>News</h1>
 	<hr>
 	<!-- <h2>Select your preferences</h2> -->
 	<!-- {#{ news_data }#} -->
-	<form class="my-2" method="POST" {% if username %} action="{{ url_for('profile.get_news', username=username) }}"
-	{% else %} action="{{ url_for('stocks_news.get_news') }}"{% endif %}>
+	<form class="my-2" method="POST" action="{{ url_for('profile.get_news', username=username) }}">
 		<div class="d-flex gap-2">
 			
 			<!-- <label for="language">Language</label> -->
