--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -6,43 +6,52 @@
 <div class="bg-light rounded-3">
     <div class="d-block text-center m-5 p-3">
         <div>
-        <h1>Your profile</h1>
-        <div class="row">
-            Logged in as: {{ user.username }}<strong> | <a href="{{ url_for('auth.login') }}"> Logout</a>
-        </div>
-        <br><br>
-        <div class="row">
-            <h2>Welcome to the user profile page...</h2>
+            <h1>Your profile</h1>
+            <div class="row">
+                Logged in as: {{ username }}<strong> | <a href="{{ url_for('auth.login') }}"> Logout</a>
+            </div>
+            <br><br>
+            <div class="row">
+                <h2>Welcome to the user profile page...</h2>
+            </div>
         </div>
     </div>
-    </div>
-        <div class="d-flex text-align-left m-2 p-3">
-            <form class="my-2" method="POST" action="{{ url_for('profile.get_news', username=username) }}">
-                <div class="row gap-2">
-                <div class="col">
-                    <label for="Stocks">Your stocks</label>
+    <div class="d-flex text-align-left m-2 p-3">
+        <div class="row gap-2">
+
+            <div class="col">
+                <form class="my-2" method="POST"
+                    action="{{ url_for('profile.update_stocks_preferences', username=username) }}">
+                    <label for="Stocks">Available stocks</label>
                     <select name="stocks" class="form-select" aria-label="Default select example">
                         {% for stock in stocks %} {% set symbol = stock['symbol'] %} {% set name
                         = stock['name'] %} {% if selected_symbol == symbol %}
-                        <option value="{{ symbol }}" selected>{{ symbol }} - {{ name }}</option>
+                        <option value="{{ symbol }}-{{ name }}" selected>{{ symbol }} - {{ name }}</option>
                         {% else %}
-                        <option value="{{ symbol }}">{{ symbol }} - {{ name }}</option>
+                        <option value="{{ symbol }}-{{ name }}">{{ symbol }} - {{ name }}</option>
                         {% endif %} {% endfor %}
                     </select>
                     <div class="d-flex justify-content-end">
-                    <button class="btn btn-secondary m-2" type="submit">Add</button></div>
-                    <div>Your stocks</div>
-                    <hr>
-                    <ul>
-                    {#% for stock in preferred_stocks %#}
-                        <li>Google</li>
-                        <li>Tesla</li>
-                        <li>{{ stock }}</li>
-                    
-                    {#% endfor %#}
-                    </ul>
-                </div>
-                <div class="col"> 
+                        <button class="btn btn-secondary m-2" type="submit">Add</button>
+                    </div>
+                </form>
+
+                <div>You current selection</div>
+                <hr>
+                <ul>
+                    {% for stock in preferred_stocks %}
+                    <!-- <li>Google</li>
+                            <li>Tesla</li> -->
+                    <li>{{ stock.symbol }}</li>
+
+                    {% endfor %}
+                </ul>
+            </div>
+
+
+            <div class="col">
+                <form class="my-2" method="POST"
+                    action="{{ url_for('profile.update_language_preferences', username=username) }}">
                     <label for="language">Your preferred language</label>
                     <select name="language" class="form-select" aria-label="Default select example">
                         {% for code, language in languages.items() %} {% if preferred_language ==
@@ -53,21 +62,12 @@
                         {% endif %} {% endfor %}
                     </select>
                     <div class="d-flex justify-content-end">
-                    <button class="btn btn-secondary m-2" type="submit">Update</button></div>
-                </div>
-                <!-- <div class="align-content-end"><button class="btn btn-secondary" type="submit">Go</button></div> -->
-                    
-            </form>
-            <!-- <div class=""><h6>Your preferred language</h6>
-                <p>{% if language %}
-                    {{ language }}
-                    {% else %}
-                    {{ message }}
-                    {% endif %}</p> -->
+                        <button class="btn btn-secondary m-2" type="submit">Update</button>
+                    </div>
+                </form>
             </div>
-
-            <div class="col"> </div>
         </div>
+    </div>
 </div>
 {% endblock %}
 
