--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -7,7 +7,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link {{'active' if active_page == 'news'}}" href="{{ url_for('stocks_news.get_news') }}">News</a>
+              <a class="nav-link {#{'active' if active_page == 'news'}}" href="{{ url_for('stocks_news.get_news') }#}">News</a>
             </li>
           </ul> -->
       </div>
