--- a/src/templates/includes/navbar_auth.html
+++ b/src/templates/includes/navbar_auth.html
@@ -16,7 +16,7 @@
             <a class="nav-link {{'active' if active_page == 'stock_details'}}" href="{{ url_for('stocks_graph.render') }}">Stock Details</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {{'active' if active_page == 'news'}}" href="{{ url_for('profile.get_news', username=username) }}">News</a>
+            <a class="nav-link {{'active' if active_page == 'news'}}" href="{{ url_for('stocks_news.get_news', username=username) }}">News</a>
           </li>
         </ul>          
 		<div class="right-10 nav-item"> <a class="nav-link" href="{{ url_for('auth.login') }}">Logout</a></div>
