--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -6,17 +6,18 @@
 <div class="bg-light rounded-3">
     <div class="d-block text-center m-5 p-3">
         <div>
-            <h1>Your profile</h1>
-            <div class="row">
-                Logged in as: {{ username }}<strong> | <a href="{{ url_for('auth.login') }}"> Logout</a>
+            <!-- <h1>Your profile</h1> -->
+            <!-- <div class="row">
             </div>
-            <br><br>
+            <br><br> -->
             <div class="row">
-                <h2>Welcome to the user profile page...</h2>
+                <h1>Welcome to the user profile</h1>
+                <p>You are logged in as <span class="text-uppercase">{{ username }}</span></p>
             </div>
         </div>
     </div>
     <div class="d-flex text-align-left m-2 p-3">
+
         <div class="row gap-2">
 
             <div class="col">
@@ -35,17 +36,15 @@
                         <button class="btn btn-secondary m-2" type="submit">Add</button>
                     </div>
                 </form>
-
+                <!-- 
                 <div>You current selection</div>
                 <hr>
                 <ul>
                     {% for stock in preferred_stocks %}
-                    <!-- <li>Google</li>
-                            <li>Tesla</li> -->
                     <li>{{ stock.symbol }}</li>
 
                     {% endfor %}
-                </ul>
+                </ul> -->
             </div>
 
 
@@ -65,6 +64,23 @@
                         <button class="btn btn-secondary m-2" type="submit">Update</button>
                     </div>
                 </form>
+                <!-- <div class="ms-3 link-button align-content-end"><i class="far fa-newspaper"></i><a href="{#{ url_for ('stocks_news.get_news', username=username) }#}" class="ms-2 link-button">Your news >></a></i></div> -->
+            </div>
+            <div class="d-flex gap-3 align-items-end">
+                <div class="col">
+                    <div>You current selection</div>
+                    <hr>
+                    <ul>
+                        {% for stock in preferred_stocks %}
+                        <li>{{ stock.symbol }}</li>
+
+                        {% endfor %}
+                    </ul>
+                </div>
+                <div class="col text-end"><i class="far fa-newspaper"></i><a
+                        href="{{ url_for ('stocks_news.get_news', username=username) }}" class="ms-2 link-button">Your
+                        news >></a>
+                </div>
             </div>
         </div>
     </div>
