--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -14,9 +14,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
 
 </head>
-<body class="overlay main-image"> 
+<body class="main-image">
 {% block navbar %} {% include 'includes/navbar.html' %} {% endblock %} 
-  <!-- <div class="overlay"> -->
+  <div class="overlay"></div>
       <div class="m-5">
         {# include('templates/partials/_messages.html') #}
         {# include('templates/partials/_search.html') #}
