--- a/src/templates/stocks_graph.html
+++ b/src/templates/stocks_graph.html
@@ -2,14 +2,20 @@
 {% block navbar %} {% include 'includes/navbar_auth.html' %} {% endblock %}
 {% block content %}
 <!-- <div class="full-window"> -->
-  <div class="d-block bg-light text-center rounded-3 my-5 p-3">
-    <h1>Stock details</h1>
+  <!-- <div class="d-block bg-light text-center rounded-3 my-5 p-3"> -->
+    <!-- <h1>Stock details</h1> -->
+    <div class="bg-light w-100 p-4 rounded-3">
+      <div class="row  align-items-center">
+        <div class="col"><h1>Stock details</h1></div>
+        <div class="col text-end"><a href="{{ url_for('profile.manage_profile', username=username) }}" class="link-button">Back to Profile</a></div>
+      </div>
+      <hr>
   <div class="stock-graph-select">
     <form action="/stocks_graph/">
       <p>Please select your stock:</p>
-      {% for stock in preferences.stocks %}
-      <input type="radio" id="stock{{stock.id}}" name="stock" value="{{stock.symbol}}">
-      <label for="stock1">{{ stock.symbol }}</label><br>
+      {% for s in preferences.stocks %}
+      <input type="radio" id="stock{{stock.id}}" name="stock" value="{{s.symbol}}" {% if s.symbol == stock %}checked=True{% endif %}>
+      <label for="stock1">{{ s.symbol }}</label><br> 
       {% endfor %}
       <!-- <input type="radio" id="stock1" name="stock" value="TSLA">
       <label for="stock1">Tesla</label><br>
