--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -3,19 +3,21 @@
 
 {% block navbar %} {% include 'includes/navbar_auth.html' %} {% endblock %}
 {% block content %}
-<div class="bg-light rounded-3">
+<div class="bg-light w-100 p-4 rounded-3">
+    <div class="row  align-items-center">
+      <div class="col"><h1>Your profile</h1></div>
+      <div class="col text-end">Logged in user: <span class="text-uppercase link-button text-small">{{ username }}</span></div>
+    </div>
+    <hr>
+<!-- <div class="bg-light rounded-3">
     <div class="d-block text-center m-5 p-3">
         <div>
-            <!-- <h1>Your profile</h1> -->
-            <!-- <div class="row">
-            </div>
-            <br><br> -->
             <div class="row">
                 <h1>Welcome to the user profile</h1>
                 <p>You are logged in as <span class="text-uppercase">{{ username }}</span></p>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="d-flex text-align-left m-2 p-3">
 
         <div class="row gap-2">
@@ -68,23 +70,33 @@
             </div>
             <div class="d-flex gap-3 align-items-end">
                 <div class="col">
-                    <div>You current selection</div>
+                    <div>Your stocks</div>
                     <hr>
                     <ul>
                         {% for stock in preferred_stocks %}
-                        <li>{{ stock.symbol }}</li>
+                        <li>{{ stock.symbol }}
+                            <div class="tooltip-css">
+                            <a href="{{ url_for ('stocks_graph.render', stock=stock.symbol) }}" ><span class="tooltiptext-css">Show graph</span>
+                            <span class="m-2"><i class="fas fa-chart-line link-button"></i></span></a>
+                            </div>
+                            <div class="tooltip-css">
+                            <a href="{{ url_for ('stocks_news.get_news', stock=stock.symbol, username=username) }}"class="tooltip-css"><span class="tooltiptext-css">Show news</span><span class="m-2"><i class="fas fa-newspaper link-button"></i></span></a>
+                        </li>
 
                         {% endfor %}
                     </ul>
                 </div>
-                <div class="col text-end"><i class="far fa-newspaper"></i><a
-                        href="{{ url_for ('stocks_news.get_news', username=username) }}" class="ms-2 link-button">Your
-                        news >></a>
-                </div>
+              <!-- <div class="col text-end"><a
+                    href="{{ url_for ('stocks_news.get_news', username=username) }}" class="ms-2 link-button">
+                    <i class="fas fa-newspaper ms-2"></i>
+                    Your news <i class="fas fa-angle-double-right"></i></a>
+                </div> -->
             </div>
         </div>
     </div>
 </div>
+
 {% endblock %}
+
 
 <!-- Image by <a href="https://pixabay.com/users/publicdomainpictures-14/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=163509">PublicDomainPictures</a> from <a href="https://pixabay.com//?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=163509">Pixabay</a> -->
