--- a/src/templates/stocks_news.html
+++ b/src/templates/stocks_news.html
@@ -9,14 +9,14 @@
 <!-- main content -->
 {% block content %}
 <div class="bg-light w-100 p-4 rounded-3">
-	<h1>News</h1>
+	<div class="row  align-items-center">
+		<div class="col"><h1>News</h1></div>
+		<div class="col text-end"><a href="{{ url_for('profile.manage_profile', username=username) }}" class="link-button">Back to Profile</a></div>
+	</div>
 	<hr>
-	<!-- <h2>Select your preferences</h2> -->
-	<!-- {#{ news_data }#} -->
 	<form class="my-2" method="POST">
 		<div class="d-flex gap-2">
-			
-			<!-- <label for="language">Language</label> -->
+			<!-- Build selection box for the languages -->
 			<select name="language" class="form-select" aria-label="Default select example">
 				{% for code, language in languages.items() %} {% if selected_language ==
 				code %}
@@ -25,16 +25,16 @@
 				<option value="{{ code }}">{{ language }}</option>
 				{% endif %} {% endfor %}
 			</select>
-			<label for="Stocks"></label>
+			<!-- Build selection box for the stocks -->
 			<select name="stocks" class="form-select" aria-label="Default select example">
 				{% for stock in preferences.stocks %}
-				{#% for stock in stocks %#} 
-				{% set symbol = stock['symbol'] %} {% set name
-				= stock['name'] %} {% if selected_symbol == symbol %}
-				<option value="{{ symbol }}" selected>{{ symbol }} - {{ name }}</option>
-				{% else %}
-				<option value="{{ symbol }}">{{ symbol }} - {{ name }}</option>
-				{% endif %} {% endfor %}
+					{% set symbol = stock['symbol'] %} {% set name
+					= stock['name'] %} {% if selected_symbol == symbol %}
+					<option value="{{ symbol }}" selected>{{ symbol }} - {{ name }}</option>
+					{% else %}
+					<option value="{{ symbol }}">{{ symbol }} - {{ name }}</option>
+					{% endif %} 
+				{% endfor %}
 			</select>
 			<button class="btn btn-secondary" type="submit">Go</button>
 		</div>
@@ -54,7 +54,6 @@
 		<h5 class="fw-medium">{{ article.snippet }}</h5>
 		<a href="{{ article.url }}">Read more...</a>
 		<br />
-		<!-- <p>{{ article.published_at }}</p> -->
 		<p>{{ article.content }}</p>
 		<hr />
 		{% endfor %} 
